# T3Chat

./: .gitignore  LICENSE  PLAN.md  README.md  pnpm-lock.yaml
!ref/: PLAN.DEV.md  extract.7z
database-server/src/: embedded-postgres.ts  index.ts
docs/: PORT_HANDLING.md
scripts/: fix-pnpm-builds.js  periodic-emulator-backup.js  port-manager.js  post-setup-embedded-pg.js  post-setup.js  run-dev.js
server/: .gitignore  Cargo.toml  README.md  diesel.toml  drizzle.config.ts  package.json
server-rs/: Cargo.toml  README.md
server-rs/migration/: .gitignore  Cargo.toml
server-rs/migration/src/: lib.rs
server-rs/src/: api.rs  db.rs  env.rs  main.rs
server-rs/src/db/repositories/: user_repository.rs
server-rs/src/middleware/: auth.rs
server-rs/src/schema/: users.rs
server/.cargo/: config.toml
server/drizzle/: 0000_initial.sql
server/drizzle/meta/: 0000_snapshot.json  _journal.json
server/migration/: README.md
server/migration/src/: lib.rs  m20250101_000001_create_users_table.rs  m20250101_000002_create_ai_models_table.rs  m20250101_000003_create_user_api_keys_table.rs  m20250101_000004_create_chats_table.rs  m20250101_000005_create_messages_table.rs
server/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
server/migrations/2025-01-01-000001_create_users_table/: down.sql  up.sql
server/migrations/2025-01-01-000002_create_ai_models_table/: down.sql  up.sql
server/migrations/2025-01-01-000003_create_user_api_keys_table/: down.sql  up.sql
server/migrations/2025-01-01-000004_create_chats_table/: down.sql  up.sql
server/migrations/2025-01-01-000005_create_messages_table/: down.sql  up.sql
server/migrations/2025-01-01-000006_create_user_features_table/: up.sql
server/migrations/2025-01-01-000007_create_user_models_table/: down.sql  up.sql
server/scripts/: auto-migrate.mjs  deploy-cloudflare.js  setup-private-schema.mjs  test-migration.mjs
server/src/: api.rs  docs.rs  env.rs  main.rs  server.ts
server/src/ai/: manager.rs  mod.rs  types.rs
server/src/ai/providers/: anthropic.rs  google.rs  mod.rs  openai.rs
server/src/api/: chat.rs  chats.rs  common.rs  me.rs  messages.rs  mod.rs  models.rs  user_api_keys.rs
server/src/api/v1/: health.rs  mod.rs
server/src/api/v1/chat/: mod.rs
server/src/api/v1/chats/: messages.rs  mod.rs
server/src/api/v1/features/: mod.rs
server/src/api/v1/models/: mod.rs
server/src/api/v1/user/: mod.rs
server/src/api/v1/user_api_keys/: mod.rs
server/src/db/: mod.rs  schema.rs
server/src/db/dto/: mod.rs
server/src/db/models/: ai_model.rs  chat.rs  feature.rs  message.rs  mod.rs  user.rs  user_api_key.rs
server/src/db/repositories/: ai_model_repository.rs  chat_repository.rs  message_repository.rs  mod.rs  user_api_key_repository.rs  user_feature_repository.rs  user_repository.rs
server/src/db/schema/: ai_model.rs  chat.rs  message.rs  mod.rs  user.rs  user_api_key.rs
server/src/lib/: db.ts
server/src/middleware/: auth.rs
server/src/schema/: users.ts
ui/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/public/: site.webmanifest
ui/src/: App.css  App.tsx  index.css  main.tsx
ui/src/components/: MasterLayout.tsx  appSidebar.tsx  floating-toolbar.tsx  login-form.tsx  mobile-warning-banner.tsx  mode-toggle.tsx  navbar.tsx  redesigned-sidebar.tsx  sidebar.tsx
ui/src/hooks/: useAuthInit.ts  useChat.ts  useChats.ts  useModels.ts  useStreamingChat.ts  useUserApiKeys.ts
ui/src/lib/: api-client.ts  auth-context.tsx  fetch-interceptor.ts  serverComm.ts  t3-chat-client.ts  toast.ts  utils.ts
(+23 files in other folders)
