[package]
name = "server-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["asm <asm2do@gmail.com>"]

[dependencies]
axum = "0"
tower = "0"
tower-http = { version = "0", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0"
sea-orm = { version = "1", features = ["postgres", "runtime-tokio-rustls", "macros"] }
chrono = { version = "0", features = ["serde"] }
async-trait = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
jsonwebtoken = "9"
reqwest = { version = "0", features = ["json"] }
futures = "0"
base64 = "0.22"

