[package]
name = "server-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["asm <asm2do@gmail.com>"]

[[bin]]
name = "t3chat-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0", features = ["http2", "multipart"] }
tower = "0"
tower-http = { version = "0", features = ["fs", "cors", "trace"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0"
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1"
chrono = { version = "0", features = ["serde"] }
async-trait = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["fmt", "env-filter"] }
tracing-appender = "0"
jsonwebtoken = "9"
reqwest = { version = "0", features = ["json"] }
futures = "0"
base64 = "0"
once_cell = "1"
emix = { git = "https://github.com/asm2025/essentialMix-rs.git", tag = "0.5.0", package = "emix" }
emixlog = { git = "https://github.com/asm2025/essentialMix-rs.git", tag = "0.5.0", package = "emixlog" }
emixdb = { git = "https://github.com/asm2025/essentialMix-rs.git", tag = "0.5.0", package = "emixdb" }
migration = { path = "./migration" }
