[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["asm <asm2do@gmail.com>"]

[[bin]]
name = "t3chat-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0", features = ["http2", "multipart"] }
tower = "0"
tower-http = { version = "0", features = ["fs", "cors", "trace"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0"
diesel = { version = "2", default-features = false, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
diesel-async = { version = "0", default-features = false, features = ["postgres", "deadpool", "tokio"] }
diesel_migrations = { version = "2", default-features = false, features = ["postgres"] }
chrono = { version = "0", features = ["serde"] }
async-trait = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["fmt", "env-filter"] }
tracing-appender = "0"
jsonwebtoken = "9"
reqwest = { version = "0", features = ["json"] }
futures = "0"
base64 = "0"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde", "db-diesel-postgres"] }
tokio-stream = "0"
url = "2"
emix = { git = "https://github.com/asm2025/essentialMix-rs.git", tag = "0.5.0", package = "emix" }
emixlog = { git = "https://github.com/asm2025/essentialMix-rs.git", tag = "0.5.0", package = "emixlog" }
emixdiesel = { git = "https://github.com/asm2025/essentialMix-rs.git", tag = "0.5.0", package = "emixdiesel", features = ["postgres"] }

